prevent dropdown-menu items from wrapping

--- a/public/css/dropdown-menu.css
+++ b/public/css/dropdown-menu.css
@@ -1,6 +1,6 @@
 .dropdown-menu {
 	position: absolute;
-	top: 100%;
+	top: 125%;
 	right: 0;
 	display: flex;
 	flex-direction: column;
@@ -13,6 +13,7 @@
 .dropdown-menu__item {
 	padding: 0.5rem 1rem;
 	color: inherit;
+	white-space: nowrap;
 }
 
 .dropdown-menu__item:hover {
